[gd_scene load_steps=2 format=3 uid="uid://mainmenu"]

[ext_resource type="Script" path="res://src/ui/MainMenu.gd" id="1_menu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_normal"]
bg_color = Color(1, 0.6, 0, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 8
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hover"]
bg_color = Color(1, 0.7, 0.2, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 8
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pressed"]
bg_color = Color(0.8, 0.4, 0, 1)
border_width_left = 4
border_width_top = 6
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_menu")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.501961)

[node name="CenterContainer" type="CenterContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="Title" type="Label" parent="Control/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 6
theme_override_constants/shadow_offset_y = 6
theme_override_constants/outline_size = 16
theme_override_font_sizes/font_size = 110
text = "Funky Flappy"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="Control/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="SlowButton" type="Button" parent="Control/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(350, 90)
layout_mode = 2
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_normal")
theme_override_styles/hover = SubResource("StyleBoxFlat_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_pressed")
text = "Slow"

[node name="MediumButton" type="Button" parent="Control/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(350, 90)
layout_mode = 2
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_normal")
theme_override_styles/hover = SubResource("StyleBoxFlat_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_pressed")
text = "Medium"

[node name="FastButton" type="Button" parent="Control/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(350, 90)
layout_mode = 2
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_normal")
theme_override_styles/hover = SubResource("StyleBoxFlat_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_pressed")
text = "Fast"

[connection signal="pressed" from="Control/CenterContainer/VBoxContainer/SlowButton" to="." method="_on_slow_button_pressed"]
[connection signal="pressed" from="Control/CenterContainer/VBoxContainer/MediumButton" to="." method="_on_medium_button_pressed"]
[connection signal="pressed" from="Control/CenterContainer/VBoxContainer/FastButton" to="." method="_on_fast_button_pressed"]
